chore: update package.json scripts and remove local dependencies; add render.yaml for deployment configuration

--- a/package.json
+++ b/package.json
@@ -5,19 +5,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-    "start":"npm run start --prefix backend"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Mayankvatsal901/Interview-portal.git"
+    "build": "cd frontend && npm install && npm run build",
+    "start": "cd backend && npm install && node src/server.js",
+    "install-all": "cd backend && npm install && cd ../frontend && npm install"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Mayankvatsal901/Interview-portal/issues"
-  },
-  "homepage": "https://github.com/Mayankvatsal901/Interview-portal#readme"
+  "license": "ISC"
 }
-
