--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "cd frontend && npm install && npm run build",
-    "start": "cd backend && npm install && node src/server.js",
-    "install-all": "cd backend && npm install && cd ../frontend && npm install"
+    "build": "cd frontend && npm install --include=dev && npm run build",
+    "start": "cd backend && npm install && node src/server.js"
   },
   "keywords": [],
   "author": "",
